--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "travis_iojs_native",
-  "optionalDependencies": {
-    "amqplib": "0.3.1",
+  "dependencies": {
     "oniguruma": "4.0.x"
   },
   "scripts": {
